--- a/style.css
+++ b/style.css
@@ -96,7 +96,8 @@ body {
 
 .main-container #imageContainer img {
   width: 90%;
-  max-width: 333px;
+  max-width: 400px;
+  border-radius: 20px;
 }
 
 .form-group {
@@ -182,7 +183,7 @@ a:hover {
   transform: translateY(-50%);
   /* background-color: rgba(0, 0, 0, 0.5); */
   background-color: transparent;
-  color: white;
+  color: #fff;
   padding: 10px;
   text-decoration: none;
   font-size: 18px;
